# django_pwa_assets

./: .gitignore  Dockerfile.test  LICENSE  README.md  pyproject.toml  run-tox.sh  tox.ini
.github/workflows/: test.yml
django_pwa_assets/: __init__.py  apps.py  conf.py  generator.py  source.py  storage.py
django_pwa_assets/generators/: __init__.py  base.py  favicons.py  icons.py  mstiles.py  splashes.py
django_pwa_assets/templates/django_pwa_assets/: favicons.html  icons.html  mstiles.html  splashes.html
django_pwa_assets/templatetags/: pwa_assets.py
script/: test-local.sh
tests/: settings.py  test_all.py  test_generators_favicons.py  test_generators_icons.py  test_generators_manifest_icons.py  test_generators_mstiles.py  test_generators_splashes.py  test_manifest.py  test_source.py  test_storage.py  test_templatetags.py
